--- a/templates/lyarhair/index.html.twig
+++ b/templates/lyarhair/index.html.twig
@@ -1,20 +1,24 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Hello LyarhairController!{% endblock %}
+{% block title %}
+	ACCUEIL
+{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+<!-- <img src="images/Perruques 360°/image50.jpeg" alt=""> -->
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
+<main class="container">
+	<section class="row">
+		<div class="col-12">
+			<h1>
+				Site e-commerce
+			</h1>
+			<p>
+				Bienvenue dans notre boutique
+			</p>
+		</div>
+        <img src="{{ asset('images/2.jpg') }}" class="d-block w-100" alt="..."/></br> 
 
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ '/home/arlette/Documents/CDA/ProjetFilRouge/mon-projet/src/Controller/LyarhairController.php'|file_link(0) }}">src/Controller/LyarhairController.php</a></code></li>
-        <li>Your template at <code><a href="{{ '/home/arlette/Documents/CDA/ProjetFilRouge/mon-projet/templates/lyarhair/index.html.twig'|file_link(0) }}">templates/lyarhair/index.html.twig</a></code></li>
-    </ul>
-</div>
-{% endblock %}
+    </section>
+</main>
+		{% endblock %}
