--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -33,7 +33,7 @@
         }) }}
 				{{ form_row(registrationForm.RGPDConsent) }}
 
-				<button type="submit" class="btn btn-secondary btn-lg my-3">M'inscrire</button>
+				<button type="submit" class="btn btn-danger btn-lg my-3">M'inscrire</button>
 				{{ form_end(registrationForm) }}
 			</div>
 		</div>
