--- a/templates/categories/list.html.twig
+++ b/templates/categories/list.html.twig
@@ -7,14 +7,13 @@
 
 {% block body %}
 
-{# {{dump(categorie)}} #}
+{# {{dump(cat.nomcat)}}  #}
 
     <main class="container">
 		<section class="row">
 			<div class="col-12">
             <h1> Liste des produits de la catégorie {{categorie.nomcat}}  </h1>  
 			</div> 
-
 			{% for produit in produits %}
 			<div class="col-3 mb-3">
 			    <article class="card h-100"> 
@@ -23,7 +22,8 @@
 						<p class="card-text">{{ produit.libcourt}} </p> 
 						<div class="col-4"> 
 						</div> 
-						 <a href="{{ path('app_produit_crud_afficher', {'id':produit.id}) }}" class="btn btn-primary"> Voir les détails </a> 
+						 <a href="{{ path('app_produit_crud_afficher', {'id':produit.id}) }}" class="btn btn-danger"> Voir les détails </a> 
+
 					</div> 
 				</article> 
 			</div> 			
