--- a/templates/pack3_bundle_dégradéplus_closure/index.html.twig
+++ b/templates/pack3_bundle_dégradéplus_closure/index.html.twig
@@ -9,11 +9,11 @@
 			<div class="col-6">
 
 				<br/>
-				<img src="{{ asset('images/Tissages brésilien/PACK 3  BUNDLE DÉGRADÉ  + CLOSURE/degrade1.jpg') }}" class="d-block w-50" alt="..."/>
+				<img src="{{ asset('images/degrade1.jpg') }}" class="d-block w-50" alt="..."/>
 				<br/>
-				<img src="{{ asset('images/Tissages brésilien/PACK 3  BUNDLE DÉGRADÉ  + CLOSURE/degrade2.jpg') }}" class="d-block w-50" alt="..."/>
+				<img src="{{ asset('images/degrade2.jpg') }}" class="d-block w-50" alt="..."/>
 				<br/>
-				<img src="{{ asset('images/Tissages brésilien/PACK 3  BUNDLE DÉGRADÉ  + CLOSURE/degrade3.jpg') }}" class="d-block w-50" alt="..."/>
+				<img src="{{ asset('images/degrade3.jpg') }}" class="d-block w-50" alt="..."/>
 
 			</div>
 		</div>
