--- a/templates/pack3_bundle_plus_closure/index.html.twig
+++ b/templates/pack3_bundle_plus_closure/index.html.twig
@@ -10,11 +10,11 @@
 
 
 				<br/>
-				<img src="{{ asset('images/Tissages brésilien/PACK 3 BUNDLE + CLOSURE/closure1.jpg') }}" class="d-block w-50" alt="..."/>
+				<img src="{{ asset('images/closure1.jpg') }}" class="d-block w-50" alt="..."/>
 				<br/>
-				<img src="{{ asset('images/Tissages brésilien/PACK 3 BUNDLE + CLOSURE/closure2.jpg') }}" class="d-block w-50" alt="..."/>
+				<img src="{{ asset('images/closure2.jpg') }}" class="d-block w-50" alt="..."/>
 				<br/>
-				<img src="{{ asset('images/Tissages brésilien/PACK 3 BUNDLE + CLOSURE/closure3.jpg') }}" class="d-block w-50" alt="..."/>
+				<img src="{{ asset('images/closure3.jpg') }}" class="d-block w-50" alt="..."/>
 
 			</div>
 		</div>
