--- a/templates/perruque_courte/index.html.twig
+++ b/templates/perruque_courte/index.html.twig
@@ -10,7 +10,7 @@
 
 
 				<br/>
-				<img src="{{ asset('images/Perruques/Perruque courte/image16.jpg') }}" class="d-block w-50" alt="..."/>
+				<img src="{{ asset('images/image16.jpg') }}" class="d-block w-50" alt="..."/>
 
 			</div>
 		</div>
