--- a/templates/perruques_de_couleurs/index.html.twig
+++ b/templates/perruques_de_couleurs/index.html.twig
@@ -10,7 +10,7 @@
 
 
 				<br/>
-				<img src="{{ asset('images/Perruques/Perruques de couleurs/image56.jpg') }}" class="d-block w-50" alt="..."/>
+				<img src="{{ asset('images/image56.jpg') }}" class="d-block w-50" alt="..."/>
 
 			</div>
 		</div>
