--- a/templates/perruques_sans_colle/index.html.twig
+++ b/templates/perruques_sans_colle/index.html.twig
@@ -10,10 +10,10 @@
 
 
 				<br/>
-				<img src="{{ asset('images/Perruques/Perruques sans colle/image138.jpg') }}" class="d-block w-50" alt="..."/>
+				<img src="{{ asset('images/image138.jpg') }}" class="d-block w-50" alt="..."/>
 				<br/>
 				<br/>
-				<img src="{{ asset('images/Perruques/Perruques sans colle/image144.jpg') }}" class="d-block w-50" alt="..."/>
+				<img src="{{ asset('images/image144.jpg') }}" class="d-block w-50" alt="..."/>
 
 
 			</div>
