--- a/templates/bonnet/index.html.twig
+++ b/templates/bonnet/index.html.twig
@@ -8,9 +8,9 @@
 		<div class="row">
 			<div class="col-5">
 				<br/>
-				<img src="{{ asset('images/Accessoires/BONNETS/bo1.jpeg') }}" class="d-block w-50" alt="..."/>
+				<img src="{{ asset('images/bo1.jpeg') }}" class="d-block w-50" alt="..."/>
 				<br/>
-				<img src="{{ asset('images/Accessoires/BONNETS/bo2.jpeg') }}" class="d-block w-50" alt="..."/>
+				<img src="{{ asset('images/bo2.jpeg') }}" class="d-block w-50" alt="..."/>
 
 
 
