--- a/templates/carréplongeant/index.html.twig
+++ b/templates/carréplongeant/index.html.twig
@@ -9,7 +9,7 @@
 			<div class="col-8"> </br> 
 
             
-				<img src="{{ asset('images/Perruques/Carré plongeant/image4.jpg') }}" class="d-block w-50" alt="..."/>
+				<img src="{{ asset('images/image4.jpg') }}" class="d-block w-50" alt="..."/>
 
         
 
