--- a/templates/coloration/index.html.twig
+++ b/templates/coloration/index.html.twig
@@ -7,9 +7,9 @@
 		<div class="row">
 			<div class="col-6">
 				<br/>
-				<img src="{{ asset('images/Accessoires/COLORATION/colo2.jpeg') }}" class="d-block w-50" alt="..."/>
+				<img src="{{ asset('images/colo2.jpeg') }}" class="d-block w-50" alt="..."/>
 				<br/>
-				<img src="{{ asset('images/Accessoires/COLORATION/colo3.jpeg') }}" class="d-block w-50" alt="..."/>
+				<img src="{{ asset('images/colo3.jpeg') }}" class="d-block w-50" alt="..."/>
 
 			</div>
 		</div>
