--- a/templates/lisseur_peigne_chauffant/index.html.twig
+++ b/templates/lisseur_peigne_chauffant/index.html.twig
@@ -8,10 +8,10 @@
 		<div class="row">
 			<div class="col-6">
 				<br/>
-				<img src="{{ asset('images/Accessoires/LISSEUR PEIGNE CHAUFFANT/lisseur1.jpeg') }}" class="d-block w-50" alt="..."/>
+				<img src="{{ asset('images/lisseur1.jpeg') }}" class="d-block w-50" alt="..."/>
 				<br/>
 				<br/>
-				<img src="{{ asset('images/Accessoires/LISSEUR PEIGNE CHAUFFANT/lisseur3.jpeg') }}" class="d-block w-50" alt="..."/>
+				<img src="{{ asset('images/lisseur3.jpeg') }}" class="d-block w-50" alt="..."/>
 
 			</div>
 		</div>
