--- a/templates/pack3_bundle/index.html.twig
+++ b/templates/pack3_bundle/index.html.twig
@@ -10,11 +10,11 @@
 
 
 				<br/>
-				<img src="{{ asset('images/Tissages brésilien/PACK 3 BUNDLE/bundle1.jpg') }}" class="d-block w-50" alt="..."/>
+				<img src="{{ asset('images/bundle1.jpg') }}" class="d-block w-50" alt="..."/>
 				<br/>
-				<img src="{{ asset('images/Tissages brésilien/PACK 3 BUNDLE/bundle2.jpg') }}" class="d-block w-50" alt="..."/>
+				<img src="{{ asset('images/bundle2.jpg') }}" class="d-block w-50" alt="..."/>
 				<br/>
-				<img src="{{ asset('images/Tissages brésilien/PACK 3 BUNDLE/bundle3.jpg') }}" class="d-block w-50" alt="..."/>
+				<img src="{{ asset('images/bundle3.jpg') }}" class="d-block w-50" alt="..."/>
 
 			</div>
 		</div>
