--- a/templates/perruques360°/index.html.twig
+++ b/templates/perruques360°/index.html.twig
@@ -9,7 +9,7 @@
 			<div class="col-8"> </br> 
 
 
-				<img src="{{ asset('images/Perruques/Perruques 360°/image47.jpeg') }}" class="d-block w-50" alt="..."/>
+				<img src="{{ asset('images/image47.jpeg') }}" class="d-block w-50" alt="..."/>
 
 			</div>
 		</div>
