--- a/templates/perruques_frange/index.html.twig
+++ b/templates/perruques_frange/index.html.twig
@@ -10,10 +10,10 @@
 
 
 				<br/>
-				<img src="{{ asset('images/Perruques/Perruques frange/image114.jpg') }}" class="d-block w-50" alt="..."/><br/>
+				<img src="{{ asset('images/image114.jpg') }}" class="d-block w-50" alt="..."/><br/>
 
 				<br/>
-				<img src="{{ asset('images/Perruques/Perruques frange/image122.jpeg') }}" class="d-block w-50" alt="..."/>
+				<img src="{{ asset('images/image122.jpeg') }}" class="d-block w-50" alt="..."/>
 			</div>
 		</div>
 
