--- a/templates/_parties/_nav.html.twig
+++ b/templates/_parties/_nav.html.twig
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-danger" data-bs-theme="light">
 	<div class="container-fluid">
-		<a class="navbar-brand" href="{{path('app_accueil')}}">LYARHAIR</a>
+		<a class="navbar-brand" href="{{path('app_lyarhair')}}">LYARHAIR</a>
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
