--- a/templates/_parties/_nav.html.twig
+++ b/templates/_parties/_nav.html.twig
@@ -12,30 +12,30 @@
 				<li class="nav-item dropdown">
 					<a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">PERRUQUES</a>
 					<div class="dropdown-menu dark">
-						<a class="dropdown-item" href="{{path('app_carr_plongeant')}}">CARRÉ PLONGEANT</a>
-						<a class="dropdown-item" href="{{path('app_perruque_courte')}}">PERRUQUE COURTE</a>
-						<a class="dropdown-item" href="{{path('app_perruques360_')}}">PERRUQUE 360°</a>
-						<a class="dropdown-item" href="{{path('app_perruques_de_couleurs')}}">PERRUQUE DE COULEUR°</a>
-						<a class="dropdown-item" href="{{path('app_perruques_frange')}}">PERRUQUE FRANGE</a>
-						<a class="dropdown-item" href="{{path('app_perruques_sans_colle')}}">PERRUQUE SANS COLLE</a>
+						<a class="dropdown-item" href="#">CARRÉ PLONGEANT</a>
+						<a class="dropdown-item" href="#">PERRUQUE COURTE</a>
+						<a class="dropdown-item" href="#">PERRUQUE 360°</a>
+						<a class="dropdown-item" href="#">PERRUQUE DE COULEUR°</a>
+						<a class="dropdown-item" href="#">PERRUQUE FRANGE</a>
+						<a class="dropdown-item" href="#">PERRUQUE SANS COLLE</a>
 					</li>
 				</li>
 				<li class="nav-item dropdown">
 					<a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">TISSAGES BRÉSILIEN</a>
 					<div class="dropdown-menu">
-						<a class="dropdown-item" href="{{path('app_pack3_bundle')}}">PACK 3 BUNDLE</a>
-						<a class="dropdown-item" href="{{path('app_pack3_bundle_plus_closure')}}">PACK 3 BUNDLE + CLOSURE
+						<a class="dropdown-item" href="#">PACK 3 BUNDLE</a>
+						<a class="dropdown-item" href="#">PACK 3 BUNDLE + CLOSURE
 						</a>
-						<a class="dropdown-item" href="{{path('app_pack3_bundle_d_grad_plus_closure')}}">PACK 3 BUNDLE DÉGRADÉ + CLOSURE
+						<a class="dropdown-item" href="#">PACK 3 BUNDLE DÉGRADÉ + CLOSURE
 						</a>
 					</li>
 				</li>
 				<li class="nav-item dropdown">
 					<a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">ACCESSOIRES</a>
 					<div class="dropdown-menu">
-						<a class="dropdown-item" href="{{path('app_bonnet')}}">BONNETS</a>
-						<a class="dropdown-item" href="{{path('app_coloration')}}">COLORATION</a>
-						<a class="dropdown-item" href="{{path('app_lisseur_peigne_chauffant')}}">LISSEUR CHAUFFANT</a>
+						<a class="dropdown-item" href="#">BONNETS</a>
+						<a class="dropdown-item" href="#">COLORATION</a>
+						<a class="dropdown-item" href="#">LISSEUR CHAUFFANT</a>
 					</li>
 				</li>
 				
