--- a/templates/categories/list.html.twig
+++ b/templates/categories/list.html.twig
@@ -1,39 +1,47 @@
 {% extends 'base.html.twig' %}
 
 
-{% block title %}Liste des produits de la catégorie {{categorie.nomcat}} 
+{% block title %}Liste des produits de la catégorie
+	{{categorie.nomcat}}
 {% endblock %}
 
 
 {% block body %}
 
-{# {{dump(cat.nomcat)}}  #}
+	{# {{dump(cat.nomcat)}}  #}
 
-    <main class="container">
+	<main class="container">
 		<section class="row">
 			<div class="col-12">
-            <h1> Liste des produits de la catégorie {{categorie.nomcat}}  </h1>  
-			</div> 
+				<h1>
+					Liste des produits de la catégorie
+					{{categorie.nomcat}}
+				</h1>
+			</div>
+
 			{% for produit in produits %}
-			 <div class="col-10">
-        <div class="card">
-            <img src="/images/{{ produit.photo }}" class="card-img-top" alt="{{ produit.photo}}">
-			<div class="col-3 mb-3">
-			    <article class="card h-100"> 
-				    <div class="card-body"> 
-					    <h2 class="card-title">{{ produit.sousrubriqueart }} </h2> 
-						<p class="card-text">{{ produit.libcourt}} </p> 
-						<div class="col-4"> 
-						</div> 
-						 <a href="{{ path('app_produit_crud_afficher', {'id':produit.id}) }}" class="btn btn-danger"> Voir les détails </a> 
 
-					</div> 
-				</article> 
-			</div> 			
-			{% endfor %}
-		</section> 
-	</main> 
-			
+				<div class="col-4">
+					<div class="card " style="width: 18rem;">
+
+						<img src="/images/{{ produit.photo }}" class="card-img-top" alt="{{ produit.photo}}">
+						<article class="card h-100">
+							<div class="card-body">
+								<h2 class="card-title">{{ produit.sousrubriqueart }}
+								</h2>
+								<p class="card-text">{{ produit.libcourt}}
+								</p>
+								<div class="col-4"></div>
+								<a href="{{ path('app_produit_crud_afficher', {'id':produit.id}) }}" class="btn btn-danger">
+									Voir les détails
+								</a>
+
+							</div>
+						</article>
+					</div>
+				{% endfor %}
+			</section>
+		</main>
 
 
-{% endblock %}
+	{% endblock %}
