--- a/templates/_parties/_footer.html.twig
+++ b/templates/_parties/_footer.html.twig
@@ -6,8 +6,8 @@
 				<li class="nav-item dropdown">
 					<a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">A PROPOS DE LYARHAIR</a>
 					<div class="dropdown-menu">
-						<a class="dropdown-item" href="{{path('app_histoire_de_notre_marque')}}">HISTOIRE DE NOTRE MARQUE</a>
-						<a class="dropdown-item" href="{{path('app_soins_capillaires')}}">SOINS CAPILLAIRES</a>
-						<a class="dropdown-item" href="{{path('app_contactez_nous')}}">CONTACTEZ NOUS</a>
+						<a class="dropdown-item" href="#">HISTOIRE DE NOTRE MARQUE</a>
+						<a class="dropdown-item" href="#">SOINS CAPILLAIRES</a>
+						<a class="dropdown-item" href="#">CONTACTEZ NOUS</a>
 					</li>
 				</li>
