--- a/templates/_parties/_nav.html.twig
+++ b/templates/_parties/_nav.html.twig
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg bg-danger" data-bs-theme="light">
 	<div class="container-fluid">
-		<a class="navbar-brand" href="{{path('app_lyarhair')}}">LYARHAIR</a>
+		<a class="navbar-brand" href="#">LYARHAIR</a>
 		<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor03" aria-controls="navbarColor03" aria-expanded="false" aria-label="Toggle navigation">
 			<span class="navbar-toggler-icon"></span>
 		</button>
@@ -10,32 +10,32 @@
 					<a class="nav-link" href="{{path('app_accueil')}}">ACCUEIL</a>
 				</li>
 				<li class="nav-item dropdown">
-					<a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">PERRUQUES</a>
+					<a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="/souscategorie/2" role="button" aria-haspopup="true" aria-expanded="false">PERRUQUES</a>
 					<div class="dropdown-menu dark">
-						<a class="dropdown-item" href="#">CARRÉ PLONGEANT</a>
-						<a class="dropdown-item" href="#">PERRUQUE COURTE</a>
-						<a class="dropdown-item" href="#">PERRUQUE 360°</a>
-						<a class="dropdown-item" href="#">PERRUQUE DE COULEUR°</a>
-						<a class="dropdown-item" href="#">PERRUQUE FRANGE</a>
-						<a class="dropdown-item" href="#">PERRUQUE SANS COLLE</a>
+						<a class="dropdown-item" href="/souscategorie/7">CARRÉ PLONGEANT</a>
+						<a class="dropdown-item" href="/souscategorie/8">PERRUQUE COURTE</a>
+						<a class="dropdown-item" href="/souscategorie/9">PERRUQUE 360°</a>
+						<a class="dropdown-item" href="/souscategorie/10">PERRUQUE DE COULEUR°</a>
+						<a class="dropdown-item" href="/souscategorie/11">PERRUQUE FRANGE</a>
+						<a class="dropdown-item" href="/souscategorie/12">PERRUQUE SANS COLLE</a>
 					</li>
 				</li>
 				<li class="nav-item dropdown">
 					<a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">TISSAGES BRÉSILIEN</a>
 					<div class="dropdown-menu">
-						<a class="dropdown-item" href="#">PACK 3 BUNDLE</a>
-						<a class="dropdown-item" href="#">PACK 3 BUNDLE + CLOSURE
+						<a class="dropdown-item" href="/souscategorie/13">PACK 3 BUNDLE</a>
+						<a class="dropdown-item" href="/souscategorie/14">PACK 3 BUNDLE + CLOSURE
 						</a>
-						<a class="dropdown-item" href="#">PACK 3 BUNDLE DÉGRADÉ + CLOSURE
+						<a class="dropdown-item" href="/souscategorie/15">PACK 3 BUNDLE DÉGRADÉ + CLOSURE
 						</a>
 					</li>
 				</li>
 				<li class="nav-item dropdown">
 					<a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">ACCESSOIRES</a>
 					<div class="dropdown-menu">
-						<a class="dropdown-item" href="#">BONNETS</a>
-						<a class="dropdown-item" href="#">COLORATION</a>
-						<a class="dropdown-item" href="#">LISSEUR CHAUFFANT</a>
+						<a class="dropdown-item" href="/souscategorie/4">BONNETS</a>
+						<a class="dropdown-item" href="/souscategorie/5">COLORATION</a>
+						<a class="dropdown-item" href="/souscategorie/6">LISSEUR CHAUFFANT</a>
 					</li>
 				</li>
 				
