--- a/templates/accueil/souscategorie.html.twig
+++ b/templates/accueil/souscategorie.html.twig
@@ -1,27 +1,25 @@
 {% extends 'base.html.twig' %}
 
-
 {% block title %}
-	{{categorie.nomcat}}
+	ACCUEIL
 {% endblock %}
 
-
 {% block body %}
+<!-- <img src="images/Perruques 360°/image50.jpeg" alt=""> -->
 
-	{# {{dump(cat.nomcat)}}  #}
+<main class="container">
+	<section class="row">
+		<div class="col-12">
+			<h1>
+				       {{ categorie.nomcat}}
 
-	<main class="container">
-		<section class="row">
-			<div class="col-12">
-				<h1>
-					{{categorie.nomcat}}
 				</h1>
-			</div>
+		</div>
 
-			{% for produit in produits %}
 
-				<div class="col-4">
-					<div class="card " style="width: 18rem;">
+	   {% for produit in categorie.Produit %}
+			<div class="col-4 col-sm-6 col-md-4 col-lg-3">
+					<div class="card mt-3"> 
 
 						<img src="/images/{{ produit.photo }}" class="card-img-top" alt="{{ produit.photo}}">
 						<article class="card h-100">
@@ -32,15 +30,22 @@
 								</p>
 								<div class="col-4"></div>
 								<a href="{{ path('app_produit_crud_afficher', {'id':produit.id}) }}" class="btn btn-danger">
-									Voir les détails
+									Ajouter au panier
 								</a>
 
 							</div>
 						</article>
 					</div>
-				{% endfor %}
-			</section>
-		</main>
+			</div>
+	   {% endfor %}
+		
+	</section>
+</main>
 
 
-	{% endblock %}
+
+		
+		
+		{% endblock %}
+
+
