--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -20,43 +20,47 @@
 					<img src="/images/2.jpg" class="d-block w-100" alt="..."/></br>
 			</div>
 		</div>
- 
-		 
-		 
 
-			<div id="carouselExampleDark" class="carousel carousel-dark slide col-12 d-flex justify-content-center" data-bs-ride="carousel">
-						<div class="card" style="width: 18rem; border-radius: 50px; overflow: hidden;">
+<div id="carouselExampleControls" class="col-12 d-flex justify-content-center carousel slide" data-bs-ride="carousel">  <div class="carousel-indicators ">
+    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
+  </div>
+  <div class="carousel-inner" style="width: 18rem; border-radius: 100px; overflow: hidden;">
+    <div class="carousel-item active flex justify-content-center" data-bs-interval="2000">
+      <img src="/images/acc.JPG" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        
+      </div>
+    </div>
+    <div class="carousel-item" data-bs-interval="2000">
+      <img src="/images/image56.jpg" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+        
+      </div>
+    </div>
+    <div class="carousel-item">
+      <img src="/images/tissage.jpeg" class="d-block w-100" alt="...">
+      <div class="carousel-caption d-none d-md-block">
+      
+      </div>
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
 
-				<div class="carousel-indicators">
 
-					<button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-					<button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="1" aria-label="Slide 2"></button>
-					<button type="button" data-bs-target="#carouselExampleDark" data-bs-slide-to="2" aria-label="Slide 3"></button>
-				</div>
-				<div class="carousel-inner">
-					<div class="carousel-item active" data-bs-interval="2000">
-						<img src="/images/tissage.jpeg" class="d-block w-100" alt="...">
-						<div class="carousel-caption d-none d-md-block"></div>
-					</div>
-					<div class="carousel-item" data-bs-interval="2000">
-						<img src="/images/imageaccueil.jpeg" class="d-block w-100" alt="...">
-						<div class="carousel-caption d-none d-md-block"></div>
-					</div>
-					<div class="carousel-item">
-						<img src="images/acc.JPG" class="d-block w-100" alt="...">
-						<div class="carousel-caption d-none d-md-block"></div>
-					</div>
-				</div>
-				<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
-					<span class="carousel-control-prev-icon" aria-hidden="true"></span>
-					<span class="visually-hidden">Previous</span>
-				</button>
-				<button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
-					<span class="carousel-control-next-icon" aria-hidden="true"></span>
-					<span class="visually-hidden">Next</span>
-				</button>
-			</div>
-		</div>
+			
+
+
+
 			<!--<div class"col-12">
 													{{ dump() }}
 												</div>-->
