--- a/templates/_parties/_adminnav.html.twig
+++ b/templates/_parties/_adminnav.html.twig
@@ -1,7 +1,8 @@
-<aside class="col-3 border border-light bg-white p-2">
+
+ <aside class="col-3 border border-light bg-white p-2">
 
 	<article class="card mb-3">
-		<div class="card-hearder-">
+		<div class="card-header">
 			Catégories
 		</div>
 		<div class="card-body">
@@ -18,7 +19,7 @@
 	</article>
 
     <article class="card mb-3">
-		<div class="card-hearder">
+		<div class="card-header">
 			Produits
 		</div>
 		<div class="card-body">
@@ -35,14 +36,14 @@
 	</article>
 
     <article class="card mb-3">
-		<div class="card-hearder">
+		<div class="card-header">
 			Utilisateurs
 		</div>
 		<div class="card-body">
 			<p>
-				<a href="">
+				<a href="{{ path('admin_users_index')}}">
 					Liste des utilisateurs</a>
 			</p>
 		</div>
 	</article>
-</aside>
+</aside> 
