--- a/templates/accueil/souscategorie.html.twig
+++ b/templates/accueil/souscategorie.html.twig
@@ -29,8 +29,8 @@
 								<p class="card-text">{{ produit.libcourt}}
 								</p>
 								<div class="col-4"></div>
-								<a href="{{ path('app_produit_crud_afficher', {'id':produit.id}) }}" class="btn btn-danger">
-									Ajouter au panier
+								<a href="{{ path('app_produit_crud_detail', {'id':produit.id}) }}" class="btn btn-danger">
+									Voir le detail
 								</a>
 
 							</div>
