--- a/templates/produit_crud/_supprimer_form.html.twig
+++ b/templates/produit_crud/_supprimer_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('app_produit_crud_supprimer', {'id': produit.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('app_produit_crud_supprimer', {'id': produit.id}) }}" onsubmit="return confirm('Êtes-vous sûr de vouloir suprimer cet élément?');">
     <input type="hidden" name="_token" value="{{ csrf_token('supprimer' ~ produit.id) }}">
-    <button class="btn">Supprimer</button>
+    <button class="btn btn-danger">Supprimer</button>
 </form>
