--- a/templates/_parties/_nav.html.twig
+++ b/templates/_parties/_nav.html.twig
@@ -15,7 +15,7 @@
 						<a class="dropdown-item" href="/souscategorie/7">CARRÉ PLONGEANT</a>
 						<a class="dropdown-item" href="/souscategorie/8">PERRUQUE COURTE</a>
 						<a class="dropdown-item" href="/souscategorie/9">PERRUQUE 360°</a>
-						<a class="dropdown-item" href="/souscategorie/10">PERRUQUE DE COULEUR°</a>
+						<a class="dropdown-item" href="/souscategorie/10">PERRUQUE DE COULEUR</a>
 						<a class="dropdown-item" href="/souscategorie/11">PERRUQUE FRANGE</a>
 						<a class="dropdown-item" href="/souscategorie/12">PERRUQUE SANS COLLE</a>
 					</li>
