--- a/templates/accueil/souscategorie.html.twig
+++ b/templates/accueil/souscategorie.html.twig
@@ -30,7 +30,7 @@
 								</p>
 								<div class="col-4"></div>
 								<a href="{{ path('app_produit_crud_detail', {'id':produit.id}) }}" class="btn btn-danger">
-									Voir le detail
+									Voir le détail
 								</a>
 
 							</div>
