--- a/templates/Cart/index.html.twig
+++ b/templates/Cart/index.html.twig
@@ -2,57 +2,67 @@
 
 {% block body %}
 	<main class="container">
-		<section class="row">
-			<div class="col-12">
-				<h1>
-					Panier
-				</h1>
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th>Produit</th>
-                            <th>Prix</th>
-                            <th>Quantité</th>
-                            <th>Total</th>
-                            <th>Action</th>
-                        
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for element in data %}
-                            <tr>
-                                <td>{{ element.produit.libcourt }}</td>
-                                <td>{{element.produit.prixachat}} £</td>
-                                <td>{{element.quantite}}</td>
-                                <td>{{element.quantite * element.produit.prixachat}} £</td>
-                                <td>
-                                    <a href="{{path('cart_add', {id: element.produit.id}) }}" class="btn btn-success">+</a>
-                                    <a href="{{path('cart_remove', {id: element. produit.id}) }}" class="btn btn-warning">-</a>
-                                    <a href="{{path('cart_delete', {id: element. produit.id}) }}" class="btn btn-danger">Supprimer</a>
-                                </td>
-                            </tr>
-                        {% else %}
-                            <tr>
-                                <td colspan="5"> Votre panier est vide</td>
-                            </tr> 
-                        {% endfor %}
-                    </tbody>
-                    <tfoot>
-                        <tr>
-                            <td colspan="3">Total</td>
-                            <td>{{ total }} £ </td>
-                            <td> 
-                                <a href="{{path('cart_empty') }}" class="btn btn-danger"> Vider</a>
-                            
-                            </td>
-                        
-                        </tr>
-                    </tfoot>
-                </table>
-                <a href="{{ path('app_commande_add')}}" class="btn btn-danger">Valider le panier</a>
-			</div>
-		</section>
+		<aside class="col-8 border border-light bg-white p-2">
+			<article class="card mb-3">
+				<div class="card-header">
+					<h1>
+						Panier
+					</h1>
+				</div>
+				<div class="card-body">
+					<table class="table">
+						<thead>
+							<tr>
+								<th>Produit</th>
+								<th>Prix</th>
+								<th>Quantité</th>
+								<th>Total</th>
+								<th>Action</th>
+
+							</tr>
+						</thead>
+						<tbody>
+							{% for element in data %}
+								<tr>
+									<td>{{ element.produit.libcourt }}</td>
+									<td>{{element.produit.prixachat}}
+										£</td>
+									<td>{{element.quantite}}</td>
+									<td>{{element.quantite * element.produit.prixachat}}
+										£</td>
+									<td>
+										<a href="{{path('cart_add', {id: element.produit.id}) }}" class="btn btn-success">+</a>
+										<a href="{{path('cart_remove', {id: element. produit.id}) }}" class="btn btn-warning">-</a>
+										<a href="{{path('cart_delete', {id: element. produit.id}) }}" class="btn btn-danger">Supprimer</a>
+									</td>
+								</tr>
+							{% else %}
+								<tr>
+									<td colspan="5">
+										Votre panier est vide</td>
+								</tr>
+							{% endfor %}
+						</tbody>
+						<tfoot>
+							<tr>
+								<td colspan="3">Total</td>
+								<td>{{ total }}
+									£
+								</td>
+								<td>
+									<a href="{{path('cart_empty') }}" class="btn btn-danger">
+										Vider</a>
+
+								</td>
+
+							</tr>
+						</tfoot>
+					</table>
+					    <a href="{{ path('app_commande_add')}}" class="btn btn-danger">Valider le panier</a>
+				</div>
+            </article> 
+        </aside>
 	</main>
 
 
-{% endblock %}
+	{% endblock %}
