--- a/templates/Cart/index.html.twig
+++ b/templates/Cart/index.html.twig
@@ -58,7 +58,7 @@
 							</tr>
 						</tfoot>
 					</table>
-                <a href="{{ path('app_commande_') }}" class="btn btn-primary">Valider Panier</a>
+                <a href="{{path('app_commande') }}" class="btn btn-primary">Valider Panier</a>
 				</div>
             </article> 
         </aside>
