--- a/templates/_parties/_nav.html.twig
+++ b/templates/_parties/_nav.html.twig
@@ -71,7 +71,7 @@
 					<ul class="navbar-nav ms-auto mb-2 mb-lg-0">
 						<li class="nav-item">
 							<a class"navco" href="{{ path('cart_index') }}">
-								<button type="button" class="btn btn-light navco text-black">Panier()</button>
+								<button type="button" class="btn btn-light navco text-black">Panier ({{ app.session.get('panier') | length}})</button>
 							</a>
 						</li>
 						&nbsp;
