--- a/templates/commande/index.html.twig
+++ b/templates/commande/index.html.twig
@@ -5,86 +5,82 @@
 {% block body %}
 
 <div class='container'>
+	<aside class="col-12 border border-light bg-white p-2">
+        <div class="card-header">
+        	<table class="table">
 
+                <thead>
+                    <tr>
+                        <th>Produit</th>
+                        <th>Prix</th>
+                        <th>Quantité</th>
+                        <th>Total</th>
+                    </tr>
+                </thead>
+                <tbody>
 
-<table class="table";
-                    <thead>
+                    {% for element in data %}
                         <tr>
-                            <th>Produit</th>
-                            <th>Prix</th>
-                            <th>Quantité</th>
-                            <th>Total</th>
-                            {# <th>Action</th> #}
+                            <td>{{ element.produit.sousrubriqueart }}</td>
+                            <td>{{ element.produit.prixachat }} €</td>
+                            <td>{{ element.quantite }}</td>
+                            <td>{{ element.quantite * element.produit.prixachat }} €</td>
+                                
                         </tr>
-                    </thead>
-                    <tbody>
-                    
-
-
-
-
-                        {% for element in data %}
-                            <tr>
-                                <td>{{ element.produit.sousrubriqueart }}</td>
-                                <td>{{ element.produit.prixachat }} €</td>
-                                <td>{{ element.quantite }}</td>
-                                <td>{{ element.quantite * element.produit.prixachat }} €</td>
-                                
-                            </tr>
-                        {% else %}
-                            <tr>
-                                <td colspan="5">Votre panier est vide</td>
-                            </tr>    
-                        {% endfor %}
-                    </tbody>
-                    <tfoot>
-
-                       
-
-                       
-                         <tr>
-                            <td colspan="3">tva</td>
-                            
-                            <td>{{ Facturetotaltva  }} %</td>
-                                
-                          </tr>
-
-                           <tr>
-                            <td colspan="3">sous Total</td>
-                            
-                            <td>{{ pttc }} €</td>
-
-                                
-                          </tr>
+                    {% else %}
                         <tr>
-                            <td colspan="3">frais de port</td>
+                            <td colspan="5">Votre panier est vide</td>
+                        </tr>    
+                    {% endfor %}
+                </tbody>
+                <tfoot>                      
+                    <tr>
+                        <td colspan="3">tva</td>
+                        <td>{{ Facturetotaltva  }} %</td>
+                                
+                    </tr>
+                    <tr>
+                        <td colspan="3">sous Total</td>
+                            
+                        <td>{{ pttc }} €</td>
+                          
+                    </tr>
+                    <tr>
+                        <td colspan="3">frais de port</td>
                             {% if pht<300 %}
-                            <td>{{ fdp }} €</td>
+                        <td>{{ fdp }} €</td>
                             
                             {% endif %}
 
                             {% if pht>300 %}
-                            <td> 0 €</td>
+                        <td> 0 €</td>
                             
                             {% endif %}
-                              </tr>
-
-
-
-                        <tr>                          
+                    </tr>
+                    <tr>                          
                             
-                             <td colspan="3">Total</td>
+                        <td colspan="3">Total</td>
                             
-                            <td>{{ total }}
+                        <td>{{ total }}
                             
-                            </td>
+                        </td>
                             
-                        </tr>
-                    </tfoot>
+                    </tr>
+                </tfoot>
 
-                </table>
-                    <a href="{{ path('app_accueil' ) }}" class="btn btn-danger">modifier</a>
+            </table>
+                <a href="{{ path('cart_index' ) }}" class="btn btn-danger">Modifier</a>
 
+                {# <a href="{{ path('payment_stripe' ) }}" class="btn btn-danger">Passer la commande</a> #}
+
+        </div>
+    </aside>
+</div>
+<form method="POST" action="{{ path('payment_stripe', {id: id}) }}">
+        <button class="btn btn-lg btn-primary" type="submit"
+        style="border-radius: 6px; position: relative; top:20px;">paiement securisé
+        | {{total}} €
+        </button>
+    </form>
                 
-                </div>
 {% endblock %}
